--- a/views/statistics.hbs
+++ b/views/statistics.hbs
@@ -24,7 +24,7 @@
                       </select>
                       <select name="group" id="groupSelect" class="form-control">
                           {{#group}}
-
+                              <option class="{{groupId}}">{{groupName}}</option>
                           {{/group}}
                       </select>
                   </form>
