--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -7,8 +7,8 @@
         </div>
         <hr>
         <div class="panel panel-default notthis">
-            <div class="panel-heading" id="#createTest">
-                <meta class="{{id}}">
+            <div class="panel-heading" id="#editTest">
+                <input type="hidden" class="{{id}}" id="{{test.TestId}}">
                 <h3 class="panel-title">Redigera test</h3>
             </div>
             <div class="panel-body">
@@ -17,7 +17,7 @@
                     <label class="control-label">Namn på test:</label>
                     <div id = "controlTestName" class=""> </div>
                     <div id = "errorTestName" class="">
-                        <input type="text" class="form-control" value="Testnamn" id="testName"></div>
+                        <input type="text" class="form-control" value="{{test.TTitle}}" id="testName"></div>
 
                     <!-- Time Limit -->
                     <label class="control-label">Tidsbegränsning:</label>
@@ -27,7 +27,7 @@
                         <span class="input-group-addon">
                             <input type="checkbox" id="timed">
                         </span>
-                            <input type="text" class="form-control" placeholder="Minuter" id="time">
+                            <input type="text" class="form-control" value="{{test.TTimeMin}}" id="time">
                         </div></div>
 
                     <!-- Datepicker -->
@@ -101,12 +101,36 @@
         </div>
 
         <div id="questionBox">
+            {{#test.questions}}
+
+                <div class="panel panel-default">
+                    <div class="panel-heading clearfix">
+                        <meta class="{{QType}}">
+
+                        <div class="pull-right">
+                            <button type="button" class="btn btn-default btn-sm btn-edit" data-toggle="modal" data-target="#editModal">Redigera</button>
+                            <button type="button" class="btn btn-default btn-sm btn-remove">
+                                &nbsp;<span class="glyphicon glyphicon-remove"></span>&nbsp;
+                            </button>
+                        </div>
+                        <h3 class="panel-title" style="margin-top: 5px">{{Question}} ({{QType}})<span style="margin-right: 15px" class="pull-right">Poäng: {{QPoints}}</span></h3>
+                    </div>
+                    <div class="panel-body">
+                        <ul class="list-group sortable">
+                            {{#this.answers}}
+                                <li class="list-group-item">{{AText}}<span class="pull-right">Rätt svar:
+                                <input type="checkbox" klickad="{{APoints}}"></span></li>
+                            {{/this.answers}}
+                        </ul>
+                    </div>
+                </div>
+            {{/test.questions}}
 
         </div>
 
         <!-- Buttons -->
         <button type="button" class="btn btn-default" data-toggle="modal" data-target="#questionModal" id="createQuestion">Skapa Fråga</button>
-        <button type="button" class="btn btn-default pull-right" id="saveTest">Spara Test</button>
+        <button type="button" class="btn btn-default pull-right" id="saveChanges">Spara ändringar</button>
     </div>
 
 </div>
@@ -121,3 +145,29 @@
 </footer>
 
 <script src="js/createedit.js"></script>
+<script>
+    $('input[type=checkbox]').each(function(){
+        if($(this).attr('klickad') == 1){
+            $(this).prop('checked', true);
+        }
+    })
+
+    var startDT = '{{test.TStartTestDate}}';
+    var endDT = '{{test.TEndTestDate}}';
+
+    $('#dateStart').val(startDT.split(' ')[0]);
+    $('#timeStart').val(startDT.split(' ')[1].substr(0, startDT.split(' ')[1].length - 3));
+    $('#timeEnd').val(endDT.split(' ')[1].substr(0, endDT.split(' ')[1].length - 3));
+    $('#date').val(endDT.split(' ')[0]);
+
+    if('{{test.TSelfCorrecting}}' == 1){
+        $('#selfCorrecting').prop('checked', true);
+        $('#directResult').toggleClass('hidden');
+        if('{{test.TResult}}' == 1){
+            $('.directResult').prop('checked', true);
+        }
+    }
+    if('{{test.TTimeMin}}' != 0){
+        $('#timed').prop('checked', true);
+    }
+</script>
