--- a/views/partials/_adminNavbar.hbs
+++ b/views/partials/_adminNavbar.hbs
@@ -14,7 +14,13 @@
         <!-- Collapse Menu -->
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/create">Skapa</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Skapa<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/create">Skapa nytt test</a></li>
+                        <li><a href="/copyMenu">Kopiera test</a></li>
+                    </ul>
+                </li>
                 <li><a href="/editMenu">Redigera</a></li>
                 <li><a href="/statistics">Statistik</a></li>
                 <li><a href="/correcting">Rätta prov</a></li>
