--- a/views/copyMenu.hbs
+++ b/views/copyMenu.hbs
@@ -4,7 +4,7 @@
     <div class="col-md-10 col-md-offset-1">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="title">Redigera Test!</h1>
+                <h1 class="title">Kopiera test</h1>
             </div>
         </div>
         <hr>
