--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -33,3 +33,13 @@ body {
 .leftMargin {
     margin-left: 25px;
 }
+
+.row {
+    text-align:center;
+}
+
+.thumbnail {
+    display: inline-block;
+    *display:inline; /* ie7 fix */
+    float: none; /* this is the part that makes it work */
+}
